# Demo-Project

./: .gitignore  CMakeLists.txt  README.md  main.cpp  ray.hpp  sphere.hpp  task_scheduler.hpp  vec3.hpp
